--- a/GrillHouseNNProg/GrillHouseNNProg.csproj
+++ b/GrillHouseNNProg/GrillHouseNNProg.csproj
@@ -30,6 +30,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.18" />
+    <PackageReference Include="QuestPDF" Version="2023.4.2" />
   </ItemGroup>
 
   <ItemGroup>
